# notes

./: .gitignore  config.example.json  env.example.ini  notes.cabal  package.yaml  repl
app/: Main.hs
back/: config.example.json  frontend.code-workspace  log.txt  notes.cabal  package.yaml  style
back/app/: Cors.hs  JwtSupport.hs  Main.hs
back/lib/: Api.hs  Config.hs  Log.hs  Logger.hs  Test.hs  Types.hs
back/lib/Config/: Config.hs  Database.hs  Global.hs
back/lib/DataAccess/: Auth.hs  Auth2.hs  Data.hs  Notes.hs  Tags.hs
back/lib/Database/: NoteDb.hs
back/lib/Database/Entities/: Note.hs  Tag.hs  User.hs
back/lib/Dto/: Auth.hs  Note.hs  Tag.hs
back/lib/Handle/: Auth.hs  Logger.hs  Notes.hs  Tags.hs
back/lib/Handler/: Auth.hs  Auth2.hs  Logger.hs
back/lib/Handler/DataAccess/: Register.hs
back/lib/Handler/Handler/: Register.hs
back/lib/Handler/Logic/: Register.hs
back/lib/Handler/Types/: Register.hs
back/lib/Impl/: Auth.hs
back/lib/Logic/: Auth.hs  Auth2.hs  Notes.hs  Tags.hs
back/migration/: liquibase.example.properties  master.yaml
back/migration/sqls/: 1683128760_init.sql  1683206267_add_title.sql  1692278875_add_tags.sql
back/test/: AuthTest.hs  Main.hs
back/test/HandlerTests/Logic/: Register.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.5/: notes-0.1.0.0-inplace.conf  package.cache
front/: .env  eslintrc.js  package-lock.json  package.json  pubspec.yaml  spago.dhall  tsconfig.json
front/lib/: container.dart  globals.dart  main.dart
front/lib/api/: api.dart  auth_data.dart  login_req.dart
front/lib/config/: config.dart  config_dev.dart
front/lib/utils/: validators.dart
front/public/: index.html
front/src/: App.tsx  Main.purs  index.tsx  vite-env.d.ts
front/src/Api/: Auth.purs  Test.purs
front/src/App/: Auth.purs  Button.purs  Register.purs
front/src/Components/Auth/: Auth.tsx  Form.tsx
front/src/Utils/: Api.ts  Config.ts
front/src/models/: init.ts
front/src/models/app/: index.ts  init.ts  types.ts
front/src/models/currentUser/: index.ts  init.ts  types.ts
front/src/services/: paths.ts  request.ts  rules.ts
front/src/ui/: ErrorPage.tsx  Home.tsx  LoginForm.tsx  RegisterForm.tsx  UnknownPage.tsx
frontend/: angular.json  notes.session.sql  package-lock.json  package.json  pubspec.yaml
frontend/src/: index.html  styles.scss
frontend/src/app/: app-routing.module.ts  app.module.ts
frontend/src/environments/: environment.production.ts  environment.ts
frontend/src/guards/: auth.guard.ts  not-auth.guard.spec.ts  not-auth.guard.ts
frontend/src/model/: session.ts
frontend/src/services/: api.service.ts  navigator.service.spec.ts  navigator.service.ts
frontend/src/state/: auth.actions.ts  auth.effect.ts  auth.reducer.ts  session.actions.ts  session.reducer.ts
frontend/src/utils/: CustomValidators.ts
lib/: Api.hs  Config.hs  Dto.hs  Lib.hs  Test.hs  Types.hs  Utils.hs
lib/Config/: Auth.hs  Global.hs
lib/DataAccess/: Auth.hs  Data.hs
lib/Database/: Migration.hs  Scheme.hs
lib/Database/Migrations/: V0001.hs
lib/Dto/: Auth.hs
lib/Handler/: Auth.hs
lib/Logic/: Auth.hs
lib/Migrations/: Migration.hs  V0001.hs
lib/Scheme/: Note.hs  NoteDb.hs  User.hs
lib/Scheme/Migrations/: V0001.hs
migration/: Main.hs
test/: Main.hs
(+7 files in other folders)
