cabal-version:      2.4
name:               notes
version:            0.1.0.0
author:             santra
maintainer:         moscowx1@mail.ru

common shared-prop
  default-language: Haskell2010
  build-depends: base ^>=4.16.4
  ghc-options:
      -Wall
      -Werror

executable notes
  import: shared-prop
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
        lib

executable migration
  import: shared-prop
  main-is: Main.hs
  hs-source-dirs: migration
  build-depends:
        lib
      , beam-postgres
      , ini

library lib
  import: shared-prop
  hs-source-dirs: lib
  other-modules:
        Database.Migrations.V0001

  exposed-modules:
        Database.Migration
        Database.Scheme
        Config
        Utils

  build-depends:
        bytestring
      , beam-core
      , beam-postgres
      , beam-migrate
      , text
      , time
      , ini
