cabal-version:      2.4
name:               notes
version:            0.1.0.0
author:             santra
maintainer:         moscowx1@mail.ru

common shared-prop
  default-language: Haskell2010
  build-depends: base ^>=4.16.4
  ghc-options:
    -Wall
    -Werror

executable notes
  import: shared-prop
  main-is: Main.hs
  hs-source-dirs: app
  build-depends: lib

executable migration
  import: shared-prop
  main-is: Main.hs
  hs-source-dirs: migration
  build-depends:
      lib
    , aeson

library lib
  import: shared-prop
  hs-source-dirs: lib
  other-modules:
    Config
    Lib
    Utils

  build-depends:
      bytestring
    , persistent
    , persistent-postgresql
    , postgresql-simple
    , esqueleto
    , text
    , time
    , aeson
    , mtl
    , cryptonite
    , monad-logger
    , servant
    , servant-server
    , warp

test-suite test
  import: shared-prop
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs

  build-depends:
      tasty
    , tasty-hunit
    , tasty-quickcheck
    , text
    , lib
    , aeson
    , postgresql-simple
