cabal-version:      2.4
name:               notes
version:            0.1.0.0
author:             santra
maintainer:         moscowx1@mail.ru

common shared-prop
  default-language: Haskell2010
  build-depends: base ^>=4.16.4
  ghc-options:
    -Wall
    -Werror

executable notes
  import: shared-prop
  main-is: Main.hs
  hs-source-dirs: app
  build-depends: 
      lib
    , aeson
    , servant-server
    , monad-logger
    , persistent-postgresql 
    , text
    , warp
    , mtl

executable migration
  import: shared-prop
  main-is: Main.hs
  hs-source-dirs: migration
  build-depends: lib

library lib
  import: shared-prop
  hs-source-dirs: lib
  exposed-modules:
    Api
    Logic.Auth
    Config.Auth
    Config.Global
    Types
    DataAccess.Auth
    DataAccess.Data
    Utils
    Dto
    Handler.Auth
  other-modules:

  build-depends:
      bytestring
    , persistent
    , postgresql-simple
    , esqueleto
    , text
    , time
    , aeson
    , mtl
    , cryptonite
    , servant
    , memory
    , monad-logger

test-suite test
  import: shared-prop
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs

  build-depends:
      tasty
    , tasty-hunit
    , tasty-quickcheck
    , text
    , lib
    , aeson
    , postgresql-simple
    , cryptonite
    , time
    , mtl
